# pydantic-form-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
0_the_problem/: README.md  app.py  model.py  test.py
1_form_submission/: README.md  html.py  model.py  test.py
2_nested_model/: README.md  app.py  html.py  model.py  test.py
3_nested_list/: README.md  html.py  model.py  test.py
4_nested_union/: README.md  html.py  model.py  test.py
